Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -95,15 +95,14 @@
         <a href="#internship" class="block nav-link">Internship</a>
         <a href="#positions" class="block nav-link">Positions</a>
         <a href="#contact" class="block nav-link">Contact</a>
-
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <header id="home" class="section flex flex-col items-center justify-center text-center">
-    <!-- Profile Image at top -->
-<img src="DP_OFFICIAL.jpg" alt="Y. Vinay" class="w-40 h-40 rounded-full mb-6 object-cover border-4 border-blue-500" data-aos="fade-down">
+    <img src="DP_OFFICIAL.jpg" alt="Y. Vinay" class="w-40 h-40 rounded-full mb-6 object-cover border-4 border-blue-500" data-aos="fade-down">
+
     <div class="max-w-3xl" data-aos="zoom-in">
       <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold">
         Hi, I'm <span class="text-blue-500">Y. Vinay</span>
@@ -118,18 +117,19 @@
   </header>
 
   <main>
-    <!-- About -->
+
+    <!-- About Section -->
     <section id="about" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
       <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
         <h2 class="section-title">About Me</h2>
         <p class="text-center text-lg leading-relaxed">
-          Enthusiastic Computer Science student with strong foundations in Python, Java, and MERN stack development. Actively
-          creating impactful projects like Deal Detector and TrackTrove, with interests in competitive programming and UI/UX design.
+          Enthusiastic Computer Science student with strong foundations in Python, Java, and MERN stack development.
+          Actively creating impactful projects like Deal Detector and TrackTrove, with interests in competitive programming and UI/UX design.
         </p>
       </div>
     </section>
 
-    <!-- Skills -->
+    <!-- Skills Section -->
     <section id="skills" class="section" data-aos="fade-up">
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="section-title">Technical Skills</h2>
@@ -146,7 +146,7 @@
       </div>
     </section>
 
-    <!-- Projects -->
+    <!-- Projects Section -->
     <section id="projects" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="section-title">Projects</h2>
@@ -157,7 +157,7 @@
           </div>
           <div class="card border-gray-700 dark:border-gray-300">
             <h3 class="text-xl font-bold mb-2">Stealth Link</h3>
-            <p class="text-gray-400 dark:text-gray-700">Device monitoring tool to analyze and manage selected devices with network/data manipulation.</p>
+            <p class="text-gray-400 dark:text-gray-700">Device monitoring tool to analyze and manage devices with network/data manipulation.</p>
           </div>
           <div class="card border-gray-700 dark:border-gray-300">
             <h3 class="text-xl font-bold mb-2">TrackTrove</h3>
@@ -168,99 +168,107 @@
     </section>
 
     <!-- Education Section -->
-<section id="education" class="section" data-aos="fade-up">
-  <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
-    <h2 class="section-title">Education</h2>
-    <div class="card border-gray-700 dark:border-gray-300 mb-4">
-      <h3 class="text-lg font-bold">B.Tech in Computer Science and Engineering</h3>
-      <p>Malla Reddy University, Hyderabad, India (2022–Present)</p>
-      <p>CGPA: 7.93</p>
-    </div>
-    <div class="card border-gray-700 dark:border-gray-300 mb-4">
-      <h3 class="text-lg font-bold">Intermediate (MPC)</h3>
-      <p>Sri Chaitanya Junior College, Hyderabad, India (2020–2022)</p>
-      <p>Percentage: 77.9%</p>
-    </div>
-    <div class="card border-gray-700 dark:border-gray-300">
-      <h3 class="text-lg font-bold">Secondary Education (SSC)</h3>
-      <p>Life Line High School, Hyderabad, India (2019)</p>
-      <p>GPA: 9.3</p>
-    </div>
-  </div>
-</section>
+    <section id="education" class="section" data-aos="fade-up">
+      <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
+        <h2 class="section-title">Education</h2>
 
-<!-- Internship Section -->
-<section id="internship" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
-  <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
-    <h2 class="section-title">Internship</h2>
-    <div class="card border-gray-700 dark:border-gray-300 mb-4">
-      <h3 class="text-lg font-bold">UI/UX Designer Intern</h3>
-      <p>Codtech IT Solutions (2024)</p>
-      <ul class="list-disc ml-6">
-        <li>Designed and implemented user-friendly UI components for client applications.</li>
-        <li>Improved usability and aesthetics in collaboration with design and dev teams.</li>
-      </ul>
-    </div>
-  </div>
-</section>
+        <div class="card border-gray-700 dark:border-gray-300 mb-4">
+          <h3 class="text-lg font-bold">B.Tech in Computer Science and Engineering</h3>
+          <p>Malla Reddy University, Hyderabad, India (2022–Present)</p>
+          <p>CGPA: 7.93</p>
+        </div>
 
-<!-- Experience Section -->
-<section id="experience" class="section" data-aos="fade-up">
-  <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
-    <h2 class="section-title">Experience</h2>
-    <div class="card border-gray-700 dark:border-gray-300 mb-4">
-      <h3 class="text-lg font-bold">Coordinator</h3>
-      <p>AutoExpo, Malla Reddy University (2 Years)</p>
-      <ul class="list-disc ml-6">
-        <li>Managed event activities, logistics, and student participation for 2 consecutive years.</li>
-      </ul>
-    </div>
-    <div class="card border-gray-700 dark:border-gray-300">
-      <h3 class="text-lg font-bold">Anchor</h3>
-      <p>Farewell Event, Malla Reddy University (2023)</p>
-      <ul class="list-disc ml-6">
-        <li>Hosted and coordinated stage events, demonstrating communication and leadership.</li>
-      </ul>
-    </div>
-  </div>
-</section>
+        <div class="card border-gray-700 dark:border-gray-300 mb-4">
+          <h3 class="text-lg font-bold">Intermediate (MPC)</h3>
+          <p>Sri Chaitanya Junior College, Hyderabad, India (2020–2022)</p>
+          <p>Percentage: 77.9%</p>
+        </div>
 
-<!-- Positions of Responsibility Section -->
-<section id="positions" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
-  <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
-    <h2 class="section-title">Positions of Responsibility</h2>
-    <div class="card border-gray-700 dark:border-gray-300">
-      <h3 class="text-lg font-bold">Student Member</h3>
-      <p>Computer Society of India (CSI), Malla Reddy University (2022–Present)</p>
-      <ul class="list-disc ml-6">
-        <li>Active participant in CSI activities, workshops, and technical events.</li>
-      </ul>
-    </div>
-  </div>
-</section>
+        <div class="card border-gray-700 dark:border-gray-300">
+          <h3 class="text-lg font-bold">Secondary Education (SSC)</h3>
+          <p>Life Line High School, Hyderabad, India (2019)</p>
+          <p>GPA: 9.3</p>
+        </div>
+      </div>
+    </section>
 
+    <!-- Internship Section -->
+    <section id="internship" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
+      <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
+        <h2 class="section-title">Internship</h2>
 
+        <div class="card border-gray-700 dark:border-gray-300 mb-4">
+          <h3 class="text-lg font-bold">UI/UX Designer Intern</h3>
+          <p>Codtech IT Solutions (2024)</p>
+          <ul class="list-disc ml-6">
+            <li>Designed and implemented user-friendly UI components for client applications.</li>
+            <li>Improved usability and aesthetics in collaboration with design and dev teams.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-<!-- Additional Information Section -->
-<section id="additional" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
-  <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
-    <h2 class="section-title">Additional Information</h2>
-    <ul class="list-disc ml-6">
-      <li><strong>Languages:</strong> Telugu (Native), English (Fluent), Hindi (Fluent)</li>
-      <li><strong>Interests:</strong> Competitive Programming, Technical Discussions, Knowledge Sharing</li>
-    </ul>
-  </div>
-</section>
+    <!-- Experience Section -->
+    <section id="experience" class="section" data-aos="fade-up">
+      <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
+        <h2 class="section-title">Experience</h2>
+
+        <div class="card border-gray-700 dark:border-gray-300 mb-4">
+          <h3 class="text-lg font-bold">Coordinator</h3>
+          <p>AutoExpo, Malla Reddy University (2 Years)</p>
+          <ul class="list-disc ml-6">
+            <li>Managed event activities, logistics, and student participation.</li>
+          </ul>
+        </div>
+
+        <div class="card border-gray-700 dark:border-gray-300">
+          <h3 class="text-lg font-bold">Anchor</h3>
+          <p>Farewell Event, Malla Reddy University (2023)</p>
+          <ul class="list-disc ml-6">
+            <li>Hosted and coordinated stage events, demonstrating communication and leadership.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Positions Section -->
+    <section id="positions" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
+      <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
+        <h2 class="section-title">Positions of Responsibility</h2>
+
+        <div class="card border-gray-700 dark:border-gray-300">
+          <h3 class="text-lg font-bold">Student Member</h3>
+          <p>Computer Society of India (CSI), Malla Reddy University (2022–Present)</p>
+          <ul class="list-disc ml-6">
+            <li>Active participant in CSI activities, workshops, and technical events.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Additional Info Section -->
+    <section id="additional" class="section bg-gray-800/50 dark:bg-gray-100" data-aos="fade-up">
+      <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-4xl">
+        <h2 class="section-title">Additional Information</h2>
+
+        <ul class="list-disc ml-6">
+          <li><strong>Languages:</strong> Telugu (Native), English (Fluent), Hindi (Fluent)</li>
+          <li><strong>Interests:</strong> Competitive Programming, Technical Discussions, Knowledge Sharing</li>
+        </ul>
+      </div>
+    </section>
 
   </main>
 
-  <!-- Contact & Footer as before -->
+  <!-- Contact & Footer -->
   <footer id="contact" class="section bg-gray-900 dark:bg-gray-50 border-t border-gray-700 dark:border-gray-200" data-aos="fade-up">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
       <h2 class="section-title">Get In Touch</h2>
+
       <p class="max-w-2xl mx-auto mb-8 text-gray-400 dark:text-gray-700">
         I'm currently seeking new opportunities. Feel free to reach out if you have a project or role you think I'd be a good fit for.
       </p>
+
       <div class="flex justify-center items-center flex-wrap gap-4 sm:gap-8 text-lg">
         <a href="mailto:vinaygoud0931@gmail.com" class="hover:text-blue-500 transition-colors">
           <i class="fas fa-envelope mr-2"></i>vinaygoud0931@gmail.com
@@ -279,8 +287,9 @@
         <span><i class="fas fa-map-marker-alt mr-2"></i>Hyderabad, India</span>
       </div>
 
+      <!-- Updated CV Download Button -->
       <div class="mt-8">
-        <a id="download-cv" href="Academic_CV_vinay.pdf" download="Y_Vinay_CV.pdf"
+        <a id="download-cv" href="vinay_resume_or_cv.pdf" download="Y_Vinay_CV.pdf"
            class="inline-flex items-center gap-2 bg-blue-600 text-white py-3 px-6 rounded-lg hover:bg-blue-700 transition">
           <i class="fas fa-file-arrow-down"></i> Download CV
         </a>
@@ -313,8 +322,9 @@
       setIcon();
     });
 
-    // CV download
-    const cvPath = 'vinay resume or cv.pdf';
+    // Updated CV Download Script
+    const cvPath = 'vinay_resume_or_cv.pdf';
+
     document.getElementById('download-cv').addEventListener('click', async (e) => {
       e.preventDefault();
       try {
@@ -334,8 +344,6 @@
       }
     });
   </script>
+
 </body>
 </html>
-
-
-
